force-app/main/default/objects/custom_create290__c/custom_create290__c.object-meta.xml
<CustomObject>
    <label>Custom created object290</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects290</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>