force-app/main/default/objects/custom_create290__c/fields/custom_create_290field503__c.field-meta.xml
<CustomField>
    <fullName>custom_create_290field503__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 290field503</label>
    <type>Checkbox</type>
</CustomField>